[gd_scene load_steps=6 format=3 uid="uid://d0ghoh2c75mq1"]

[ext_resource type="Script" uid="uid://f2n6ttuuysen" path="res://scripts/quiz_game.gd" id="1_6wfmo"]
[ext_resource type="FontFile" uid="uid://c157kmylnaked" path="res://assets/Fonts/OpenDyslexic-Bold.woff" id="2_05y5j"]
[ext_resource type="FontFile" uid="uid://b4nefixj2hemt" path="res://assets/Fonts/OpenDyslexic-Bold.otf" id="3_ulv70"]
[ext_resource type="Texture2D" uid="uid://bshdoqp7hxylf" path="res://assets/UI/Banners/Banner_Horizontal.png" id="4_polf2"]
[ext_resource type="PackedScene" path="res://scenes/Grass_9.tscn" id="5_8ljgr"]

[node name="QuizGame" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6wfmo")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = -51.0
offset_top = -74.0
offset_right = 639.0
offset_bottom = 118.0
scale = Vector2(2, 2)
texture = ExtResource("4_polf2")
patch_margin_left = 121
patch_margin_right = 119
axis_stretch_horizontal = 1

[node name="QuestionLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 31.0
offset_right = 1169.0
offset_bottom = 239.0
theme_override_colors/default_color = Color(0, 0.2, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.321569)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/bold_font = ExtResource("2_05y5j")
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[b]Question 1???fffÄ‘sfffffffffffffffffds"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 394.0
offset_top = 312.0
offset_right = 894.0
offset_bottom = 712.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonA" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05y5j")
theme_override_font_sizes/font_size = 50

[node name="ButtonB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05y5j")
theme_override_font_sizes/font_size = 50

[node name="ButtonC" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05y5j")
theme_override_font_sizes/font_size = 50

[node name="ButtonD" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05y5j")
theme_override_font_sizes/font_size = 50

[node name="FeedbackLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 228.0
offset_right = 889.0
offset_bottom = 428.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.717647)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/bold_font = ExtResource("3_ulv70")
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[b]ddsdsdsd[/b]"
horizontal_alignment = 1

[node name="Grass_9" parent="." instance=ExtResource("5_8ljgr")]
z_index = -1
position = Vector2(-1092, -279)
scale = Vector2(2, 2)

[connection signal="pressed" from="VBoxContainer/ButtonA" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonB" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonD" to="." method="_on_button_d_pressed"]
